# gred

./: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  Circle.cpp  Circle.h  Command.h  CopyInsertCommand.cpp  CopyInsertCommand.h  CreateCommand.cpp  CreateCommand.h  DeleteCommand.cpp  DeleteCommand.h  DrawerLabel.cpp  DrawerLabel.h  Ellipse.cpp  Ellipse.h  Figure.cpp  Figure.h  Line.cpp  Line.h  MainWnd.cpp  MainWnd.h  MainWnd.qrc  MainWnd.ui  MoveAngleCommand.cpp  MoveAngleCommand.h  MoveCommand.cpp  MoveCommand.h  Picture.cpp  Picture.h  Point.cpp  Point.h  PrimitiveFigure.cpp  PrimitiveFigure.h  Square.cpp  Square.h  TouchCommand.cpp  TouchCommand.h  Triangle.cpp  Triangle.h  (+4 more)
